<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">#terngame</string>
    <string name="event_name">#terngame 2014</string>
    <string name="name_field">TEAM NAME</string>
    <string name="password_field">PASSWORD</string>
    <string name="sign_in_button">Start</string>
    <string name="start_code">START CODE</string>
    <string name="start_code_button">GO!</string>
    <string name="instruction_header">CURRENT INSTRUCTIONS</string>
    <string name="title_activity_puzzle">PuzzleActivity</string>
    <string name="action_settings">Settings</string>
    <string name="puzzle_title">CURRENT PUZZLE</string>
    <string name="time_title">TIME SPENT</string>
    <string name="answer_title">SUBMIT AN ANSWER</string>
    <string name="answer_button">Submit</string>
    <string name="hint_button">Hints</string>
    <string name="guess_log_button_text">Guess Log</string>
    <string name="title_activity_guess">GuessActivity</string>
    <string name="guess_label">YOU GUESSED</string>
    <string name="skip_label">CORRECT ANSWER IS</string>
    <string name="tweet_prompt">Throw fear into the hearts of your competitors! Tweet your status!</string>
    <string name="title_activity_answer_log">AnswerLogActivity</string>
    <string name="guess_log_title">Previous Guesses</string>
    <string name="no_guesses">You haven\'t made any guesses yet.</string>
    <string name="share_chooser_title">Share via...</string>
    <string name="admin_clear_button">Clear All Data</string>
    <string name="admin_mode_title">ADMIN MODE (Use at your own risk):</string>
    <string name="admin_clear_one_button">Clear this puzzle</string>
    <string name="current_puzzle_text">Current Puzzle:</string>
    <string name="num_solved_text">Puzzles Solved:</string>
    <string name="num_skipped_text">Puzzles Skipped</string>
    <string name="None">None</string>
    <string name="solved_text">SOLVED</string>
    <string name="skipped_text">SKIPPED</string>
    <string name="instruction">INSTRUCTION</string>
    <string name="partials">PARTIALS</string>
    <string name="in_progress_text">IN PROGRESS</string>
    <string name="default_instructions">Solve puzzles. Earn glory.</string>
    <string name="no_puzzles">You haven\'t started any puzzles yet.</string>
    <string name="answer">ANSWER</string>
    <string name="num_guesses">#GUESSES</string>
    <string name="num_hints">#HINTS</string>
    <string name="status">STATUS</string>
    <string name="status_title_text">Puzzle Stats</string>
    <string name="hint_title_text">Available Hints</string>
    <string name="no_hints">There are no hints available for this puzzle.</string>
    <string name="hint_prompt">NEW HINT AVAILABLE</string>
    <string name="notif_hint_title">New Hint Available</string>
    <string name="twitter_collection_title">Collected Twittermon</string>
    <string name="no_twittermon_yet">You don\'t have any Twittermon to fight with.</string>
    <string name="collect_title">Wild Twittermon found!</string>
    <string name="too_soon_title">Woah there tiger!</string>
    <string name="twittermon_not_started">Good instincts, but that\'s not going to work until you start the puzzle.</string>
    <string name="trap_code_title">Enter trap code to collect:</string>
    <string name="collect_button">Catch \'em!</string>
    <string name="no_twittermon_hint">Tap on a tag to try and trap one.</string>
    <string name="battle_button_text">Battle History</string>
    <string name="select_button">Battle a Twittermon You\'ve Already Collected</string>
    <string name="battle_title">Battle Mode</string>
    <string name="battle_result_title">Battle Results</string>
    <string name="battle_instructions">Tap your phone against an opponent\'s tag to fight.</string>
    <string name="versus">vs.</string>
    <string name="battle_history">Past Twittermon Battles</string>
    <string name="opponent_grid_title">Pick an opponent</string>
    <string name="finale_button_text">Battle Royale</string>
    <string name="finale_start_button_text">Start!</string>
    <string name="win_button_text">Win</string>
    <string name="lose_button_text">Lose</string>
    <string name="tie_button_text">Tie</string>
    <string name="try_again_text">Try Again</string>
    <string name="finale_instructions">Correctly predict the outcome of five Twittermon battles in a row to get your final answer.</string>
    <string name="royale_title_text">Battle Royale</string>
    <string name="royale_win_text">YOU WIN!\n5 of 5 battles predicted correctly.</string>
    <string name="twittermon_collect_prompt">Earn more Twittermon through head-to-head battles. Tap on your Twittermon to start a battle.</string>
    <string name="ok">Ok</string>
    <string name="bad_nfc_title">Tag read incomplete</string>
    <string name="bad_nfc_text">The tag didn\'t read correctly. Try not to move it as much.</string>
    <string name="collect_fail_title">Incorrect trap code</string>
    <string name="collect_succeed_title">Success!</string>
    <string name="collect_dupe_title">Duplicate Twittermon</string>
    <string name="title_activity_base">BaseActivity</string>
    <string name="show_event_data">Show Event Data</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>

</resources>
