<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:textAlignment="center"
              android:gravity="center_horizontal">

    <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/battle_title"
            android:id="@+id/battle_title"
            style="@style/titleHeadingTheme"/>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Now select an opponent"
            android:id="@+id/battle_prompt"/>

    <include layout="@layout/twittermon_battle_bar"/>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/battle_instructions"
            android:id="@+id/battle_instruction"
            style="@style/instructionTheme"/>

    <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/select_button"
            android:id="@+id/select_button"
            style="@style/ButtonTheme"/>

    <Button
            style="@style/ButtonTheme"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/battle_history"
            android:id="@+id/battle_history_button"
            android:layout_gravity="center_horizontal"
            android:singleLine="true"/>

</LinearLayout>