<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:paddingLeft="@dimen/activity_horizontal_margin"
              android:paddingRight="@dimen/activity_horizontal_margin"
              android:paddingTop="@dimen/activity_vertical_margin"
              android:paddingBottom="@dimen/activity_vertical_margin"
              tools:context=".PuzzleActivity"
              android:orientation="vertical">

    <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/puzzle_title"
            style="@style/textHeadingTheme"/>

    <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="puzzle name "
            android:id="@+id/puzzle_name_text"
            android:layout_gravity="center"
            style="@style/eventTitleTheme"/>

    <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:layout_gravity="center"
            android:gravity="center">

        <TextView
                style="@style/textHeadingTheme"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/time_title"
                android:id="@+id/textView"
                android:singleLine="false"
                android:layout_gravity="center"
                android:gravity="center_vertical|center_horizontal"
                android:textSize="30dp"
                />

        <Chronometer
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/puzzle_chronometer"
                android:layout_gravity="center"
                android:textSize="70sp"
                android:layout_weight="0"
                android:password="false"
                android:gravity="center"/>
    </LinearLayout>

    <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="start puzzle!"
            android:id="@+id/do_puzzle_button"
            style="@style/StatusButtonTheme"
            android:layout_weight="1"
            android:paddingBottom="8dp"/>

    <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/answer_title"
            android:id="@+id/answer_title_text"
            style="@style/textHeadingTheme"
            android:layout_weight="0"/>

    <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_weight="0">

        <EditText
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:id="@+id/answer_text"
                android:layout_weight="1"
                android:singleLine="true"
                />

        <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/answer_button"
                android:id="@+id/answer_button"
                android:layout_weight="0"
                style="@style/ButtonTheme"/>

    </LinearLayout>

    <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="bottom"
            android:gravity="bottom">

        <Button
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/hint_button"
                android:id="@+id/hint_button"
                style="@style/ButtonTheme"
                android:longClickable="true"
                android:layout_weight="1"/>

        <Button
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/guess_log_button_text"
                android:id="@+id/guess_log_button"
                style="@style/ButtonTheme"
                android:layout_weight="1"/>
    </LinearLayout>

</LinearLayout>
