<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:gravity="center_horizontal">

    <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/royale_title"
            android:textAppearance="?android:attr/textAppearanceLarge"
            style="statusTheme"
            android:gravity="center_horizontal"
            android:text="@string/royale_title_text"/>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/match_counter_text"
            android:gravity="center_horizontal"
            android:text="MATCH ##"
            style="@style/textHeadingTheme"/>

    <include layout="@layout/twittermon_battle_bar"/>

    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Does CREATURE win, lose or tie?"
            android:id="@+id/prompt_text"
            android:paddingLeft="10dp"/>

    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:id="@+id/button_bar"
            style="@style/ButtonTheme">

        <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/win_button_text"
                android:id="@+id/win_button"
                android:layout_weight="1"/>

        <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lose_button_text"
                android:id="@+id/lose_button"
                android:layout_weight="1"/>

        <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tie_button_text"
                android:id="@+id/tie_button"
                android:layout_weight="1"/>
    </LinearLayout>

    <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:layout_gravity="center"
            android:gravity="center">

        <TextView
                style="@style/textHeadingTheme"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/battle_royale_time_title"
                android:id="@+id/textView"
                android:singleLine="false"
                android:layout_gravity="center"
                android:gravity="center_vertical|center_horizontal"
                android:textSize="30dp"
                />

        <Chronometer
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/puzzle_chronometer"
                android:layout_gravity="center"
                android:textSize="70sp"
                android:layout_weight="0"
                android:password="false"
                android:gravity="center"/>

    </LinearLayout>

    <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/try_again_text"
            android:id="@+id/restart_royale_button"
            />
</LinearLayout>